tls_origination_via_tls_l2_proxy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: app
                      domains:
                        - "service-https"
                        - "other-https"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: loopback_cluster-https
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - name: loopback_listener_service-https
      address:
        pipe:
          path: "@/listener_service-https"
      listener_filters:
        # inspect SNI and set REQUESTED_SERVER_NAME
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
      filter_chains:
        - filters:
            - name: tcp
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: tcp_stats
                cluster: service-squid
                tunneling_config:
                  hostname: "%REQUESTED_SERVER_NAME%:443"
                  headers_to_add:
                    - header:
                        key: Proxy-Authorization
                        value: Basic dXNlcjpwYXNzd29yZA== # user:password see squid/generate-htpasswd.sh
                      append: false
  clusters:
    - name: loopback_cluster-https
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          upstream_http_protocol_options:
            auto_sni: true
          explicit_http_config:
            http_protocol_options: {}
      type: STATIC
      load_assignment:
        cluster_name: loopback_cluster-https
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: "@/listener_service-https"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    - name: service-squid
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: proxy_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-squid
                      port_value: 3129
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: service-squid
